# python-demo

./: .gitignore  README.md
book2MK/: README.md  book2mk.py  main.py  pyproject.toml
book2MK/output/: 三体.md
ec_da/: main.py  pyproject.toml  淘宝母婴数据分析.ipynb  淘宝母婴数据分析.py
stock-analysis/: .gitignore  QUICKSTART.md  README.md  create_sample_data.py  pyproject.toml  stock-analysis.md
stock-analysis/notebooks/: 00_test_kernel.ipynb  01_data_collection.ipynb  02_technical_indicators.ipynb  03_visualization.ipynb  04_multi_stock_analysis.ipynb  05_final_report.ipynb
stock-analysis/src/: __init__.py  data_loader.py  indicators.py  multi_stock_analysis.py  report_generator.py  visualization.py
weather-analysis/: .env.example  .gitignore  cities_preset.json  pyproject.toml  weather-analysis.code-workspace
weather-analysis/.husky/: pre-commit
weather-analysis/config/: config.py  paths.py
weather-analysis/notebooks/: weather_analysis.ipynb
weather-analysis/src/: city_manager.py  data_fetcher.py
