[project]
name = "stock-analysis"
version = "0.1.0"
description = "股票数据分析与投资模拟项目"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "yfinance>=0.2.0",
    "pandas-datareader>=0.10.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.14.0",
    "ipywidgets>=8.0.0",
    "tqdm>=4.65.0",
    "pytest>=7.4.0",
    "mplfinance>=0.12.0",
    "jinja2>=3.1.0",
    "weasyprint>=59.0",
    "ipykernel>=6.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "jupyterlab>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
